REOPENED 231918
REGRESSION (r283935): [ macOS wk1 ] imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus-multiple-times.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=231918
Summary REGRESSION (r283935): [ macOS wk1 ] imported/w3c/web-platform-tests/html/sema...
ayumi_kojima
Reported 2021-10-18 16:28:12 PDT
imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus-multiple-times.html Is a flaky failure on macOS wk1 Release. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Finteractive-elements%2Fthe-dialog-element%2Fdialog-autofocus-multiple-times.html Result page: https://build.webkit.org/results/Apple-BigSur-Release-WK1-Tests/r284398%20(6218)/results.html Diff: --- /Volumes/Data/worker/bigsur-release-tests-wk1/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus-multiple-times-expected.txt +++ /Volumes/Data/worker/bigsur-release-tests-wk1/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus-multiple-times-actual.txt @@ -1,4 +1,6 @@ -PASS autofocus is run every time a dialog is opened +Harness Error (TIMEOUT), message = null +TIMEOUT autofocus is run every time a dialog is opened Test timed out + According to the history, the test started being flaky at around r283935.
Attachments
Patch (4.54 KB, patch)
2021-11-08 08:04 PST, Chris Dumez
no flags
Patch (4.64 KB, patch)
2021-11-08 14:56 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2021-10-18 16:28:35 PDT
ayumi_kojima
Comment 2 2021-10-18 16:30:29 PDT
The failure is also seen on wk1 Debug.
ayumi_kojima
Comment 3 2021-10-18 17:04:56 PDT
I was able to reproduce the failure locally using run-webkit-tests -1 --iterations 50 --exit-after-n-failures 1 imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus-multiple-times.html I was able to reproduce the failure with r283938 and the test passed with r283934. No revision available to test in between.
ayumi_kojima
Comment 4 2021-10-18 17:07:59 PDT
I think https://trac.webkit.org/changeset/283935/webkit might have caused the regression.
ayumi_kojima
Comment 5 2021-10-18 17:12:41 PDT
ayumi_kojima
Comment 6 2021-10-19 11:26:31 PDT
*** Bug 231969 has been marked as a duplicate of this bug. ***
ayumi_kojima
Comment 7 2021-10-19 11:27:11 PDT
imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/focus-autofocus.html is also flaky failing on macOS wk1 Release with the same diff.
ayumi_kojima
Comment 8 2021-10-19 13:59:27 PDT
ayumi_kojima
Comment 9 2021-10-20 15:50:25 PDT
*** Bug 231969 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 10 2021-11-08 08:04:32 PST
Tim Nguyen (:ntim)
Comment 11 2021-11-08 13:26:17 PST
Comment on attachment 443548 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=443548&action=review > LayoutTests/platform/mac-wk1/TestExpectations:788 > webkit.org/b/231918 imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/focus-autofocus.html [ Pass Failure ] > > webkit.org/b/232042 imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus.html [ Pass Failure ] Can you check if those tests stop being flaky as well and remove them if they're not? They're part of the same series of wk1 autofocus flaky failures
Chris Dumez
Comment 13 2021-11-08 13:37:37 PST
(In reply to Tim Nguyen (:ntim) from comment #11) > Comment on attachment 443548 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=443548&action=review > > > LayoutTests/platform/mac-wk1/TestExpectations:788 > > webkit.org/b/231918 imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/focus-autofocus.html [ Pass Failure ] > > > > webkit.org/b/232042 imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus.html [ Pass Failure ] > > Can you check if those tests stop being flaky as well and remove them if > they're not? > > They're part of the same series of wk1 autofocus flaky failures imported/w3c/web-platform-tests/html/semantics/selectors/pseudo-classes/focus-autofocus.html is still flaky. I haven't checked the others yet.
Chris Dumez
Comment 14 2021-11-08 14:55:01 PST
imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus.html is fixed by this patch too. I'll unskip it.
Chris Dumez
Comment 15 2021-11-08 14:55:52 PST
*** Bug 232042 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 16 2021-11-08 14:56:38 PST
Chris Dumez
Comment 17 2021-11-08 14:59:38 PST
(In reply to Chris Dumez from comment #14) > imported/w3c/web-platform-tests/html/semantics/interactive-elements/the- > dialog-element/dialog-autofocus.html is fixed by this patch too. I'll unskip > it. imported/w3c/web-platform-tests/html/interaction/focus/the-autofocus-attribute/document-with-fragment-valid.html is still flaky though, so different reason.
Chris Dumez
Comment 18 2021-11-08 15:12:48 PST
(In reply to Chris Dumez from comment #17) > (In reply to Chris Dumez from comment #14) > > imported/w3c/web-platform-tests/html/semantics/interactive-elements/the- > > dialog-element/dialog-autofocus.html is fixed by this patch too. I'll unskip > > it. > > imported/w3c/web-platform-tests/html/interaction/focus/the-autofocus- > attribute/document-with-fragment-valid.html is still flaky though, so > different reason. Ditto for imported/w3c/web-platform-tests/html/interaction/focus/the-autofocus-attribute/spin-by-blocking-style-sheet.html. Still flaky timeout so likely caused by something else.
EWS
Comment 19 2021-11-08 17:04:53 PST
Committed r285449 (243999@main): <https://commits.webkit.org/243999@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443611 [details].
Antoine Quint
Comment 20 2021-12-17 07:02:35 PST
I just saw this test being flaky during this test run: https://ews-build.webkit.org/#/builders/56/builds/22257.
Antoine Quint
Comment 21 2021-12-17 07:23:29 PST
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Finteractive-elements%2Fthe-dialog-element%2Fdialog-autofocus.html suggests that at least this test, which was unskipped in this patch, is not reliably passing. Reopening based on this evidence.
Note You need to log in before you can comment on or make changes to this bug.