REGRESSION (r283935): [ macOS wk1 ] imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-autofocus-multiple-times.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=231918 <rdar://problem/84393055>

Reviewed by Wenson Hsieh.

Source/WebCore:

Our "flush autofocus candidates" algorithm wasn't quite matching the specification [1].
In particular, we were incorrectly removing a candidate from the list when not ready
to autofocus due to loading CSS stylesheets.

The spec says to remove the candidate from the list at step 5.6. We should check the stylesheet
counter at step 5.5, and return early, *before* removing the candidate from the list.

[1] https://html.spec.whatwg.org/multipage/interaction.html#flush-autofocus-candidates

No new tests, unskipped existing test.

* dom/Document.cpp:
(WebCore::Document::flushAutofocusCandidates):

LayoutTests:

Unskip test that should no longer be flaky.

* platform/mac-wk1/TestExpectations:



Canonical link: https://commits.webkit.org/243999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285449 268f45cc-cd09-0410-ab3c-d52691b4dbfc